# Galapagos-Core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSwig.cmake  Doxyfile  Galapagos.sln  LICENSE.txt  Makefile  README.md  enabled-checks.md
.github/workflows/: cmake.yml
Docs/: Doxyfile  conf.py  make.bat
Docs/Source/: conf.py  index.rst
Galapagos/: Galapagos.vcxitems  Galapagos.vcxproj  Galapagos.vcxproj.filters  Header.h  chromosome_metadata.h  creature.h  crossover.h  galapagos.cpp  galapagos.h  galapagos_types.h  genetic_factory.cpp  genetic_factory.h  genetic_operator.h  mutation.h  operator.h  population.cpp  population.h  population_metadata.h  selection_algorithm.h  stochastic.cpp  stochastic.h  termination_condition.h  tournament_selection.cpp
Galapagos.Python/: Galapagos.Python.pyproj  Galapagos.py  setup.py
Galapagos.Python/galapagos/api/: __init__.py  population_metadata.py
Headers/API/: chromosome.h  creature.h  crossover.h  galapagos.h  galapagos_metadata.h  mutation.h  population.h  selection_algorithm.h  stochastic.h  termination_condition.h
Headers/API/Factory/: genetic_factory.h
Source/: CMakeLists.txt  CMakeSwig.cmake  constructor_macro.swg  creature_internal.cpp  creature_internal.h  galapagos.cpp  galapagos.swg  galapagos_assemblies.h  galapagos_bootstrap.cpp  genetic_factory.cpp  genetic_factory.h  population.cpp  population.h  population_internal.cpp  population_internal.h  stochastic.cpp  stochastic_internal.cpp  stochastic_internal.h  thread_pool.h
Source/API/: CMakeLists.txt  api.swg  chromosome.h  creature.h  crossover.h  galapagos.h  galapagos_metadata.h  genetic_factory.h  genetic_operator.h  mutation.h  population.h  selection_algorithm.h  stochastic.h  termination_condition.h
Source/API/Factory/: genetic_factory.h
Source/Chromosomes/: CMakeLists.txt  chromosome_internal.h  crossover_internal.h  mutation_internal.h  vector_chromosome.cpp  vector_chromosome.h
Source/Chromosomes/Permutation/: CMakeLists.txt  permutation_chromosome.cpp  permutation_chromosome_bootstrap.cpp
Source/Chromosomes/Permutation/API/: permutation_chromosome.h  permutation_chromosome_metadata.h
Source/Chromosomes/Vector/: CMakeLists.txt  CMakeSwig.cmake  gaussian_mutation.cpp  gaussian_mutation.h  kpoint_crossover.cpp  kpoint_crossover.h  randomization_mutation.cpp  randomization_mutation.h  vector_chromosome.cpp  vector_chromosome.h  vector_chromosome.swg  vector_chromosome_bootstrap.cpp
Source/Chromosomes/Vector/API/: vector_chromosome.h  vector_chromosome_metadata.h
Source/Crossovers/: CMakeLists.txt  crossover_internal.h  kpoint_crossover.cpp  kpoint_crossover.h
Source/Factory/: genetic_factory.cpp
Source/Mutations/: CMakeLists.txt  gaussian_mutation.cpp  gaussian_mutation.h  mutation_internal.h  randomization_mutation.cpp  randomization_mutation.h
Source/SelectionAlgorithms/: CMakeLists.txt  CMakeSwig.cmake  selection_algorithm_bootstrap.cpp  selection_algorithms.swg  tournament_selection.cpp  tournament_selection.h
Source/SelectionAlgorithms/API/: selection_algorithm_metadata.h
Source/TerminationConditions/: CMakeLists.txt  CMakeSwig.cmake  fitness_threshold.cpp  fitness_threshold.h  termination_condition_bootstrap.cpp  termination_conditions.swg
Source/TerminationConditions/API/: termination_condition_metadata.h
Tests/: CMakeLists.txt  fakeit.hpp  runner.py
Tests/Integration/: CMakeLists.txt  throughput_tests.cpp
Tests/Unit/: CMakeLists.txt  selection_algorithm_tests.cpp  termination_condition_tests.cpp  vector_chromosome_crossover_tests.cpp  vector_chromosome_mutation_tests.cpp  vector_mutation_tests.cpp
